<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/my_widgets" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/user_settings" />
       <!-- <item
            android:id="@+id/nav_app_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/app_settings" /> -->
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_people_black_24dp"
                android:title="@string/about_us" />
          <!--  <item
                android:id="@+id/nav_send_message"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send_message" /> -->
        </menu>
    </item>

</menu>
